# MysteryMovieClub

./: .aiexclude  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev_setup.sh  main.py  manage.py  pyproject.toml  railway.json  setup_dev.sh
.devcontainer/: Dockerfile  bash_aliases.sh  devcontainer.json
.devcontainer/scripts/: dev_setup.sh
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: settings.py  tests.py  urls.py  views.py
config/tests/: factories.py  test_admin.py  test_crispy.py  test_factories.py
movies/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
movies/management/commands/: seed_imdb_mysteries.py  seed_reviews.py
movies/migrations/: 0001_initial.py  0002_director_remove_mysterytitle_director_and_more.py  0002_review.py  0003_series_alter_mysterytitle_options_and_more.py
movies/models/: __init__.py  collection.py  director.py  mystery.py  review.py  series.py  tag.py  watchlist.py
movies/static/movies/css/: director_detail.css  heatmap.css  mystery_detail.css
movies/static/movies/js/: director_detail.js  taxonomy_detail.js
movies/templates/movies/: collection_confirm_delete.html  collection_detail.html  collection_form.html  collection_item_form.html  collection_list.html  director_detail.html  director_list.html  movie_list.html  mystery_detail.html  review_form.html  review_list.html  series_detail.html  series_list.html  watchlist.html
movies/templates/movies/includes/: collection_card.html  heatmap.html  review_helpful_votes.html  taxonomy_chart.html  taxonomy_list.html
movies/templatetags/: movie_extras.py
movies/tests/: factories.py  test_collections.py  test_core.py  test_directors.py  test_factories.py  test_movies.py  test_reviews.py  test_series.py  test_tags.py  test_watchlist.py
movies/views/: __init__.py  collections.py  mixins.py  reviews.py  tags.py  taxonomy.py  titles.py  watchlist.py
reviews/: admin.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/templates/reviews/: mystery_list.html
scripts/: seed_collections.py  seed_db.py  seed_movies.py  seed_reviews.py  seed_tag_votes.py  seed_tags.py  seed_users.py  seed_watchlist.py
static/css/: styles.css
static/js/: darkmode.js
templates/: 400.html  403.html  404.html  500.html  base.html  home.html
templates/includes/: footer.html  header.html  messages.html  navbar.html  pagination.html
templates/registration/: login.html
users/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: user_detail.html
users/tests/: test_profiles.py  test_users.py
users/views/: __init__.py  profiles.py  signup.py
